arc-script/tests/unit/src/snapshots/mlir@if_else.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/if_else.arc

---
module @toplevel {
    func @crate_test() -> si32 {
        %x_0 = constant true
        %x_1 = constant false
        %x_2 = arc.constant 3 : si32
        %x_5 = "arc.if"(%x_0) ({
            %x_3 = "arc.if"(%x_1) ({
                "arc.block.result"(%x_2) : (si32) -> ()
            },{
                "arc.block.result"(%x_2) : (si32) -> ()
            }) : (i1) -> si32
            "arc.block.result"(%x_3) : (si32) -> ()
        },{
            %x_4 = "arc.if"(%x_1) ({
                "arc.block.result"(%x_2) : (si32) -> ()
            },{
                "arc.block.result"(%x_2) : (si32) -> ()
            }) : (i1) -> si32
            "arc.block.result"(%x_4) : (si32) -> ()
        }) : (i1) -> si32
        return %x_5 : si32
    }
}

