arc-script/tests/unit/src/snapshots/mlir@ifs.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/ifs.arc

---
module @toplevel {
    func @crate_main() -> () {
        // noop
        return
    }

    func @crate_test() -> si32 {
        %x_1 = arc.constant 65 : si32
        %x_2 = arc.constant 66 : si32
        %x_3 = arith.constant true
        %x_4 = "arc.if"(%x_3) ({
            "arc.block.result"(%x_1) : (si32) -> ()
        },{
            "arc.block.result"(%x_2) : (si32) -> ()
        }) : (i1) -> si32
        return %x_4 : si32
    }
}

