arc-script/tests/unit/src/snapshots/mlir@path.arc.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/path.arc

---
module @toplevel {
    func @crate_main() -> () {
        %x_0 = arc.constant 1 : si32
        // noop
        return
    }
}

