arc-script/tests/unit/src/snapshots/rust@enum_pattern_nested.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/enum_pattern_nested.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    #[codegen::rewrite]
    pub enum Baz {
        Baz_Some(i32),
        Baz_None(Unit),
    }
    #[codegen::rewrite]
    pub enum Foo {
        Foo_Bar(Baz),
        Foo_None(Unit),
    }
    pub fn x_9() -> Unit {
        let x_8: Unit = ();
        val!(x_8)
    }
    pub fn main() -> Unit {
        let x_0: i32 = 5i32;
        let x_1: Baz = enwrap!(Baz_Some, val!(x_0));
        let x_2: Foo = enwrap!(Foo_Bar, val!(x_1));
        let x_3: bool = is!(Foo_Bar, val!(x_2));
        let x_D: Unit = if val!(x_3) {
            let x_4: Baz = unwrap!(Foo_Bar, val!(x_2));
            let x_5: bool = is!(Baz_Some, val!(x_4));
            let x_C: Unit = if val!(x_5) {
                let x_6: i32 = unwrap!(Baz_Some, val!(x_4));
                let x_7: Unit = ();
                val!(x_7)
            } else {
                let x_A: Box<dyn ValueFn() -> Unit> = Box::new(x_9) as Box<dyn ValueFn() -> Unit>;
                let x_B: Unit = val!(x_A)();
                val!(x_B)
            };
            val!(x_C)
        } else {
            let x_A: Box<dyn ValueFn() -> Unit> = Box::new(x_9) as Box<dyn ValueFn() -> Unit>;
            let x_B: Unit = val!(x_A)();
            val!(x_B)
        };
        val!(x_D)
    }
}
pub use arc_script_output::*;


