arc-script/tests/unit/src/snapshots/rust@if_else.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/if_else.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    pub fn test() -> i32 {
        let x_0: bool = true;
        let x_1: bool = false;
        let x_2: i32 = 3i32;
        let x_5: i32 = if val!(x_0) {
            let x_3: i32 = if val!(x_1) { val!(x_2) } else { val!(x_2) };
            val!(x_3)
        } else {
            let x_4: i32 = if val!(x_1) { val!(x_2) } else { val!(x_2) };
            val!(x_4)
        };
        val!(x_5)
    }
}
pub use arc_script_output::*;


