arc-script/tests/unit/src/snapshots/rust@ifs.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/ifs.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    pub fn main() -> Unit {
        let x_0: Unit = ();
        val!(x_0)
    }
    pub fn test() -> i32 {
        let x_1: i32 = 65i32;
        let x_2: i32 = 66i32;
        let x_3: bool = true;
        let x_4: i32 = if val!(x_3) { val!(x_1) } else { val!(x_2) };
        val!(x_4)
    }
}
pub use arc_script_output::*;


