arc-script/tests/unit/src/snapshots/rust@lambda.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/lambda.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    pub fn x_0(i_0: i32) -> i32 {
        let x_1: i32 = 1i32;
        let x_2: i32 = val!(i_0) + val!(x_1);
        val!(x_2)
    }
    pub fn test() -> i32 {
        let x_3: Box<dyn ValueFn(i32) -> i32> = Box::new(x_0) as Box<dyn ValueFn(i32) -> i32>;
        let x_4: i32 = 1i32;
        let x_5: i32 = val!(x_3)(val!(x_4));
        val!(x_5)
    }
}
pub use arc_script_output::*;


